--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: 成长是一种群居的孤独
+title: 亲手打造的Github博客，目标是写文章写到容量限制为止
 description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
